Fix bug 149126: Mail Client doesn't work correctly with Open Office with rpm builds patch by joey.shen@sun.com r=blizzard@mozilla.org sr=dmose@mozilla.org a=asa@mozilla.org